results/django__django-16877/20260523T235420Z/failbase.txt
$ ./tests/runtests.py --verbosity 2 --settings=test_sqlite --parallel 1 template_tests.filter_tests.test_escapeseq

    filter_expression = self.compile_filter(token.contents)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 597, in compile_filter
    return FilterExpression(token, self)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 693, in __init__
    filter_func = parser.find_filter(filter_name)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 603, in find_filter
    raise TemplateSyntaxError("Invalid filter: '%s'" % filter_name)
django.template.exceptions.TemplateSyntaxError: Invalid filter: 'escapeseq'

======================================================================
ERROR: test_chain_join (template_tests.filter_tests.test_escapeseq.EscapeseqTests.test_chain_join)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/testbed/django/test/utils.py", line 443, in inner
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/tests/template_tests/utils.py", line 58, in inner
    func(self)
  File "/testbed/tests/template_tests/filter_tests/test_escapeseq.py", line 45, in test_chain_join
    output = self.engine.render_to_string("escapeseq_join", {"a": ["x&y", "<p>"]})
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/engine.py", line 189, in render_to_string
    t = self.get_template(template_name)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/testbed/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 196, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 481, in parse
    raise self.error(token, e)
  File "/testbed/django/template/base.py", line 479, in parse
    filter_expression = self.compile_filter(token.contents)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 597, in compile_filter
    return FilterExpression(token, self)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 693, in __init__
    filter_func = parser.find_filter(filter_name)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 603, in find_filter
    raise TemplateSyntaxError("Invalid filter: '%s'" % filter_name)
django.template.exceptions.TemplateSyntaxError: Invalid filter: 'escapeseq'

======================================================================
ERROR: test_chain_join_autoescape_off (template_tests.filter_tests.test_escapeseq.EscapeseqTests.test_chain_join_autoescape_off)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/testbed/django/test/utils.py", line 443, in inner
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/tests/template_tests/utils.py", line 58, in inner
    func(self)
  File "/testbed/tests/template_tests/filter_tests/test_escapeseq.py", line 56, in test_chain_join_autoescape_off
    output = self.engine.render_to_string(
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/engine.py", line 189, in render_to_string
    t = self.get_template(template_name)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/testbed/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 196, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 510, in parse
    raise self.error(token, e)
  File "/testbed/django/template/base.py", line 508, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/defaulttags.py", line 564, in autoescape
    nodelist = parser.parse(("endautoescape",))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 481, in parse
    raise self.error(token, e)
  File "/testbed/django/template/base.py", line 479, in parse
    filter_expression = self.compile_filter(token.contents)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 597, in compile_filter
    return FilterExpression(token, self)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 693, in __init__
    filter_func = parser.find_filter(filter_name)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/testbed/django/template/base.py", line 603, in find_filter
    raise TemplateSyntaxError("Invalid filter: '%s'" % filter_name)
django.template.exceptions.TemplateSyntaxError: Invalid filter: 'escapeseq'

----------------------------------------------------------------------
Ran 4 tests in 0.006s

FAILED (errors=4)
